--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         margin: 10px 0;
         border: 2px solid #ff00ff;
     }
-    video {
+    iframe {
         width: 100%;
-        margin-top: 10px;
+        height: 400px;
         border: 2px solid #ff00ff;
     }
     /* Hidden Easter egg */
@@ -94,10 +94,18 @@
 
 <section>
     <h2>How the Internet Works</h2>
-    <video controls>
-        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
+    <iframe src="https://www.youtube.com/embed/Dxcc6ycZ73M" 
+            title="How the Internet Works" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen>
+    </iframe>
+</section>
+
+<!-- Cloud Computing Section -->
+<section>
+    <h2>Cloud Computing</h2>
+    <p>Cloud computing allows data and applications to be stored and accessed over the Internet instead of a local computer. It enables engineers to collaborate remotely, scale resources easily, and access powerful tools without needing expensive hardware. Popular services like Google Drive, AWS, and Microsoft Azure make cloud computing accessible for personal and professional projects.</p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/2/21/Cloud_computing.svg" alt="Cloud Computing Illustration">
 </section>
 
 <!-- Hidden Easter Egg -->
