--- a/index.html
+++ b/index.html
@@ -46,11 +46,38 @@
         display: block;
         margin: 10px 0;
         border: 2px solid #ff00ff;
+        cursor: pointer;
+        transition: transform 0.2s;
+    }
+    img:hover {
+        transform: scale(1.05);
     }
     iframe {
         width: 100%;
         height: 400px;
         border: 2px solid #ff00ff;
+    }
+    /* Lightbox (popup) */
+    #lightbox {
+        display: none;
+        position: fixed;
+        z-index: 9999;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.9);
+        justify-content: center;
+        align-items: center;
+    }
+    #lightbox img {
+        max-width: 90%;
+        max-height: 90%;
+        border: 3px solid #ff00ff;
+        box-shadow: 0 0 30px #ff00ff;
+    }
+    #lightbox:target {
+        display: flex;
     }
     /* Hidden Easter egg */
     #lebron {
@@ -84,16 +111,12 @@
 
 <section>
     <h2>Unit 1 Topic Illustration</h2>
-    <a href="https://cdn-icons-png.flaticon.com/512/552/552220.png" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/552/552220.png" alt="Binary Numbers Illustration">
-    </a>
+    <img src="https://cdn-icons-png.flaticon.com/512/552/552220.png" alt="Binary Numbers Illustration" onclick="openLightbox(this)">
 </section>
 
 <section>
     <h2>Unit 2 Topic Illustration</h2>
-    <a href="https://cdn-icons-png.flaticon.com/512/3616/3616770.png" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/3616/3616770.png" alt="Data Compression Illustration">
-    </a>
+    <img src="https://cdn-icons-png.flaticon.com/512/3616/3616770.png" alt="Data Compression Illustration" onclick="openLightbox(this)">
 </section>
 
 <section>
@@ -109,14 +132,17 @@
 <section>
     <h2>Cloud Computing</h2>
     <p>Cloud computing allows data and applications to be stored and accessed over the Internet instead of a local computer. It enables engineers to collaborate remotely, scale resources easily, and access powerful tools without needing expensive hardware. Popular services like Google Drive, AWS, and Microsoft Azure make cloud computing accessible for personal and professional projects.</p>
-    <a href="https://cdn-icons-png.flaticon.com/512/4144/4144784.png" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/4144/4144784.png" alt="Cloud Computing Illustration">
-    </a>
+    <img src="https://cdn-icons-png.flaticon.com/512/4144/4144784.png" alt="Cloud Computing Illustration" onclick="openLightbox(this)">
 </section>
 
 <!-- Hidden Easter Egg -->
 <div id="lebron">
     🏀 Surprise! LeBron James is watching! 🏀
+</div>
+
+<!-- Lightbox -->
+<div id="lightbox" onclick="closeLightbox()">
+    <img id="lightbox-img" src="" alt="Zoomed Image">
 </div>
 
 <script>
@@ -132,6 +158,18 @@
             alert("Easter Egg Unlocked: LeBron James!");
         }
     });
+
+    // Lightbox functions
+    function openLightbox(img) {
+        const lightbox = document.getElementById('lightbox');
+        const lightboxImg = document.getElementById('lightbox-img');
+        lightbox.style.display = 'flex';
+        lightboxImg.src = img.src;
+    }
+
+    function closeLightbox() {
+        document.getElementById('lightbox').style.display = 'none';
+    }
 </script>
 
 </body>
