--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
 </section>
 
 <section>
-    <h2>Unit 1 Topic Illustration</h2>
-    <img src="https://cdn.pixabay.com/photo/2017/08/30/01/01/binary-2695560_960_720.png" alt="Binary Numbers Illustration" onclick="openLightbox(this)">
+    <h2>Unit 1: Binary Numbers</h2>
+    <img src="https://cdn.pixabay.com/photo/2021/11/21/11/07/binary-code-numbers-data-background-6808781.jpg" alt="Binary Code Illustration" onclick="openLightbox(this)">
 </section>
 
 <section>
-    <h2>Unit 2 Topic Illustration</h2>
-    <img src="https://cdn.pixabay.com/photo/2016/11/29/04/28/technology-1867396_960_720.jpg" alt="Data Compression Illustration" onclick="openLightbox(this)">
+    <h2>Unit 2: Data Compression</h2>
+    <img src="https://image.cleanpng.com/2021/06/diagram-transparent-background-hi-res-data-compression-diagram.png" alt="Data Compression Diagram" onclick="openLightbox(this)">
 </section>
 
 <section>
@@ -128,11 +128,10 @@
     </iframe>
 </section>
 
-<!-- Cloud Computing Section -->
 <section>
     <h2>Cloud Computing</h2>
     <p>Cloud computing allows data and applications to be stored and accessed over the Internet instead of a local computer. It enables engineers to collaborate remotely, scale resources easily, and access powerful tools without needing expensive hardware. Popular services like Google Drive, AWS, and Microsoft Azure make cloud computing accessible for personal and professional projects.</p>
-    <img src="https://cdn.pixabay.com/photo/2017/08/30/01/01/cloud-2695560_960_720.png" alt="Cloud Computing Illustration" onclick="openLightbox(this)">
+    <img src="https://freesvg.org/img/cloud-computing-diagram-vector-illustration.png" alt="Cloud Computing Diagram" onclick="openLightbox(this)">
 </section>
 
 <!-- Hidden Easter Egg -->
