--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Noel John's Retro Page</title>
 <style>
-    /* Retro vibes */
     body {
         font-family: 'Courier New', monospace;
         background-color: #1a1a1a;
@@ -22,7 +21,7 @@
         font-size: 2em;
         letter-spacing: 2px;
         text-shadow: 2px 2px #000;
-        cursor: pointer; /* Easter egg trigger */
+        cursor: pointer;
     }
     section {
         max-width: 800px;
@@ -57,27 +56,22 @@
         height: 400px;
         border: 2px solid #ff00ff;
     }
-    /* Lightbox (popup) */
+    /* Lightbox */
     #lightbox {
         display: none;
         position: fixed;
-        z-index: 9999;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0, 0, 0, 0.9);
+        top: 0; left: 0;
+        width: 100%; height: 100%;
+        background: rgba(0,0,0,0.9);
         justify-content: center;
         align-items: center;
+        z-index: 9999;
     }
     #lightbox img {
         max-width: 90%;
         max-height: 90%;
         border: 3px solid #ff00ff;
         box-shadow: 0 0 30px #ff00ff;
-    }
-    #lightbox:target {
-        display: flex;
     }
     /* Hidden Easter egg */
     #lebron {
@@ -91,9 +85,7 @@
 </head>
 <body>
 
-<header id="header">
-    Noel John
-</header>
+<header id="header">Noel John</header>
 
 <section>
     <h2>My Goals After High School</h2>
@@ -111,12 +103,12 @@
 
 <section>
     <h2>Unit 1: Binary Numbers</h2>
-    <img src="https://cdn.pixabay.com/photo/2021/11/21/11/07/binary-code-numbers-data-background-6808781.jpg" alt="Binary Code Illustration" onclick="openLightbox(this)">
+    <img src="https://cdn.pixabay.com/photo/2017/08/30/01/01/binary-2695560_960_720.png" alt="Binary Numbers" onclick="openLightbox(this)">
 </section>
 
 <section>
     <h2>Unit 2: Data Compression</h2>
-    <img src="https://image.cleanpng.com/2021/06/diagram-transparent-background-hi-res-data-compression-diagram.png" alt="Data Compression Diagram" onclick="openLightbox(this)">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/28/Data_compression_in_text.svg/640px-Data_compression_in_text.svg.png" alt="Data Compression" onclick="openLightbox(this)">
 </section>
 
 <section>
@@ -131,25 +123,21 @@
 <section>
     <h2>Cloud Computing</h2>
     <p>Cloud computing allows data and applications to be stored and accessed over the Internet instead of a local computer. It enables engineers to collaborate remotely, scale resources easily, and access powerful tools without needing expensive hardware. Popular services like Google Drive, AWS, and Microsoft Azure make cloud computing accessible for personal and professional projects.</p>
-    <img src="https://freesvg.org/img/cloud-computing-diagram-vector-illustration.png" alt="Cloud Computing Diagram" onclick="openLightbox(this)">
+    <img src="https://cdn.pixabay.com/photo/2016/12/02/10/39/cloud-computing-1877232_960_720.png" alt="Cloud Computing" onclick="openLightbox(this)">
 </section>
 
-<!-- Hidden Easter Egg -->
-<div id="lebron">
-    🏀 Surprise! LeBron James is watching! 🏀
-</div>
+<div id="lebron">🏀 Surprise! LeBron James is watching! 🏀</div>
 
 <!-- Lightbox -->
 <div id="lightbox" onclick="closeLightbox()">
-    <img id="lightbox-img" src="" alt="Zoomed Image">
+    <img id="lightbox-img" src="" alt="Zoomed">
 </div>
 
 <script>
-    // Easter egg: Click the header 5 times to reveal LeBron
+    // Easter egg
     let clickCount = 0;
     const header = document.getElementById('header');
     const lebron = document.getElementById('lebron');
-
     header.addEventListener('click', () => {
         clickCount++;
         if(clickCount === 5){
@@ -158,14 +146,13 @@
         }
     });
 
-    // Lightbox functions
+    // Lightbox
     function openLightbox(img) {
         const lightbox = document.getElementById('lightbox');
         const lightboxImg = document.getElementById('lightbox-img');
-        lightbox.style.display = 'flex';
         lightboxImg.src = img.src;
+        lightbox.style.display = 'flex';
     }
-
     function closeLightbox() {
         document.getElementById('lightbox').style.display = 'none';
     }
