--- a/index.html
+++ b/index.html
@@ -44,13 +44,16 @@
         max-width: 100%;
         height: auto;
         display: block;
-        margin: 10px 0;
+        margin: 10px auto;
         border: 2px solid #ff00ff;
+        box-shadow: 0 0 15px #00ffcc;
+        border-radius: 8px;
     }
-    video {
+    video, iframe {
         width: 100%;
         margin-top: 10px;
         border: 2px solid #ff00ff;
+        box-shadow: 0 0 15px #00ffcc;
     }
     /* Hidden Easter egg */
     #lebron {
@@ -84,20 +87,18 @@
 
 <section>
     <h2>Unit 1 Topic Illustration</h2>
-    <img src="https://cdn-icons-png.flaticon.com/512/2721/2721292.png" alt="Binary Numbers Illustration">
+    <img src="https://cdn-icons-png.flaticon.com/512/3039/3039385.png" alt="Bits and Binary Illustration">
 </section>
 
 <section>
     <h2>Unit 2 Topic Illustration</h2>
-    <img src="https://cdn-icons-png.flaticon.com/512/4072/4072305.png" alt="Data Compression Illustration">
+    <img src="https://cdn-icons-png.flaticon.com/512/942/942751.png" alt="Metadata Illustration">
 </section>
 
 <section>
     <h2>How the Internet Works</h2>
-    <video controls>
-        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/7_LPdttKXPc" 
+        title="How the Internet Works" frameborder="0" allowfullscreen></iframe>
 </section>
 
 <!-- Cloud Computing Section -->
