--- a/index.html
+++ b/index.html
@@ -44,16 +44,40 @@
         max-width: 100%;
         height: auto;
         display: block;
-        margin: 10px auto;
+        margin: 10px 0;
         border: 2px solid #ff00ff;
-        box-shadow: 0 0 15px #00ffcc;
-        border-radius: 8px;
+        cursor: pointer;
+        transition: transform 0.2s;
     }
-    video, iframe {
+    img:hover {
+        transform: scale(1.05);
+    }
+    iframe {
         width: 100%;
-        margin-top: 10px;
+        height: 400px;
         border: 2px solid #ff00ff;
-        box-shadow: 0 0 15px #00ffcc;
+    }
+    /* Lightbox (popup) */
+    #lightbox {
+        display: none;
+        position: fixed;
+        z-index: 9999;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.9);
+        justify-content: center;
+        align-items: center;
+    }
+    #lightbox img {
+        max-width: 90%;
+        max-height: 90%;
+        border: 3px solid #ff00ff;
+        box-shadow: 0 0 30px #ff00ff;
+    }
+    #lightbox:target {
+        display: flex;
     }
     /* Hidden Easter egg */
     #lebron {
@@ -67,8 +91,8 @@
 </head>
 <body>
 
-<header id="header">
-    Noel John
+<header id="header">  
+    Noel John  
 </header>
 
 <section>
@@ -86,46 +110,66 @@
 </section>
 
 <section>
-    <h2>Unit 1 Topic Illustration</h2>
-    <img src="https://cdn-icons-png.flaticon.com/512/3039/3039385.png" alt="Bits and Binary Illustration">
+    <h2>Unit 1 Topic: Bits & Bytes</h2>
+    <img src="https://cdn.pixabay.com/photo/2018/05/27/20/37/data-3432628_960_720.jpg"
+         alt="Bits and Bytes Illustration"
+         onclick="openLightbox(this)">
 </section>
 
 <section>
     <h2>Unit 2 Topic Illustration</h2>
-    <img src="https://cdn-icons-png.flaticon.com/512/942/942751.png" alt="Metadata Illustration">
+    <img src="https://cdn.pixabay.com/photo/2016/11/29/04/28/technology-1867396_960_720.jpg"
+         alt="Data Compression Illustration"
+         onclick="openLightbox(this)">
 </section>
 
 <section>
     <h2>How the Internet Works</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/7_LPdttKXPc" 
-        title="How the Internet Works" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/Dxcc6ycZ73M" 
+            title="How the Internet Works" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen>
+    </iframe>
 </section>
 
-<!-- Cloud Computing Section -->
 <section>
     <h2>Cloud Computing</h2>
     <p>Cloud computing allows data and applications to be stored and accessed over the Internet instead of a local computer. It enables engineers to collaborate remotely, scale resources easily, and access powerful tools without needing expensive hardware. Popular services like Google Drive, AWS, and Microsoft Azure make cloud computing accessible for personal and professional projects.</p>
-    <img src="https://cdn-icons-png.flaticon.com/512/4144/4144796.png" alt="Cloud Computing Illustration">
+    <img src="https://cdn.pixabay.com/photo/2017/08/30/01/01/cloud-2695560_960_720.png"
+         alt="Cloud Computing Illustration"
+         onclick="openLightbox(this)">
 </section>
 
-<!-- Hidden Easter Egg -->
-<div id="lebron">
-    🏀 Surprise! LeBron James is watching! 🏀
+<div id="lebron">  
+    🏀 Surprise! LeBron James is watching! 🏀  
+</div>
+
+<div id="lightbox" onclick="closeLightbox()">  
+    <img id="lightbox-img" src="" alt="Zoomed Image">  
 </div>
 
 <script>
-    // Easter egg: Click the header 5 times to reveal LeBron
     let clickCount = 0;
     const header = document.getElementById('header');
     const lebron = document.getElementById('lebron');
 
     header.addEventListener('click', () => {
         clickCount++;
-        if(clickCount === 5){
+        if (clickCount === 5) {
             lebron.style.display = 'block';
             alert("Easter Egg Unlocked: LeBron James!");
         }
     });
+
+    function openLightbox(img) {
+        const lightbox = document.getElementById('lightbox');
+        const lightboxImg = document.getElementById('lightbox-img');
+        lightbox.style.display = 'flex';
+        lightboxImg.src = img.src;
+    }
+    function closeLightbox() {
+        document.getElementById('lightbox').style.display = 'none';
+    }
 </script>
 
 </body>
