--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
 
 <section>
     <h2>Unit 1 Topic Illustration</h2>
-    <img src="https://cdn.pixabay.com/photo/2017/08/30/01/01/binary-2695560_960_720.png" alt="Binary Numbers Illustration" onclick="openLightbox(this)">
+    <img src="https://cdn-icons-png.flaticon.com/512/552/552220.png" alt="Binary Numbers Illustration" onclick="openLightbox(this)">
 </section>
 
 <section>
     <h2>Unit 2 Topic Illustration</h2>
-    <img src="https://cdn.pixabay.com/photo/2016/11/29/04/28/technology-1867396_960_720.jpg" alt="Data Compression Illustration" onclick="openLightbox(this)">
+    <img src="https://cdn-icons-png.flaticon.com/512/3616/3616770.png" alt="Data Compression Illustration" onclick="openLightbox(this)">
 </section>
 
 <section>
@@ -132,7 +132,7 @@
 <section>
     <h2>Cloud Computing</h2>
     <p>Cloud computing allows data and applications to be stored and accessed over the Internet instead of a local computer. It enables engineers to collaborate remotely, scale resources easily, and access powerful tools without needing expensive hardware. Popular services like Google Drive, AWS, and Microsoft Azure make cloud computing accessible for personal and professional projects.</p>
-    <img src="https://cdn.pixabay.com/photo/2017/08/30/01/01/cloud-2695560_960_720.png" alt="Cloud Computing Illustration" onclick="openLightbox(this)">
+    <img src="https://cdn-icons-png.flaticon.com/512/4144/4144784.png" alt="Cloud Computing Illustration" onclick="openLightbox(this)">
 </section>
 
 <!-- Hidden Easter Egg -->
