--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             background-color: #f0e68c; /* retro yellow */
             font-family: 'Courier New', monospace;
             text-align: center;
+            padding: 20px;
         }
         h1 {
             color: #ff4500;
@@ -16,12 +17,17 @@
         }
         h2 {
             color: #00008b;
+            margin-top: 40px;
         }
         img {
             width: 300px; /* adjust size */
             margin: 20px;
             border: 4px dashed #00008b;
             border-radius: 8px;
+            transition: transform 0.3s;
+        }
+        img:hover {
+            transform: scale(1.1); /* slight zoom on hover */
         }
         .unit-section {
             margin-bottom: 50px;
@@ -43,7 +49,7 @@
 
     <div class="unit-section">
         <h2>Cloud Computing</h2>
-        <img src="download-2.jpeg" alt="Cloud Computing Image">
+        <img src="cloud-computing.jpeg" alt="Cloud Computing Image">
     </div>
 </body>
 </html>
