--- a/index.html
+++ b/index.html
@@ -1,52 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Retro Units Page</title>
-    <style>
-        body {
-            background-color: #f0e68c; /* retro yellow */
-            font-family: 'Courier New', monospace;
-            text-align: center;
-            padding: 20px;
-        }
-        h1 {
-            color: #ff4500;
-            text-shadow: 2px 2px #000;
-        }
-        h2 {
-            color: #00008b;
-            margin-top: 40px;
-        }
-        img {
-            width: 300px; /* adjust size */
-            margin: 20px;
-            border: 4px dashed #00008b;
-            border-radius: 8px;
-            display: inline-block; /* ensures image shows immediately */
-        }
-        .unit-section {
-            margin-bottom: 50px;
-        }
-    </style>
-</head>
-<body>
-    <h1>Welcome to the Retro Units Page</h1>
-
-    <div class="unit-section">
-        <h2>Unit 1</h2>
-        <img src="unit1.png" alt="Unit 1 Screenshot">
-    </div>
-
-    <div class="unit-section">
-        <h2>Unit 2</h2>
-        <img src="unit2.png" alt="Unit 2 Screenshot">
-    </div>
-
-    <div class="unit-section">
-        <h2>Cloud Computing</h2>
-        <img src="cloud-computing.jpeg" alt="Cloud Computing Image">
-    </div>
-</body>
-</html>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Noel John's Retro Page</title>
+  <style>
+    body {
+      font-family: 'Courier New', monospace;
+      background-color: #1a1a1a;
+      color: #00ffcc;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+    }
+    header {
+      background-color: #ff00ff;
+      color: #fff;
+      text-align: center;
+      padding: 25px;
+      font-size: 2em;
+      letter-spacing: 2px;
+      text-shadow: 2px 2px #000;
+    }
+    section {
+      max-width: 800px;
+      margin: 20px auto;
+      padding: 20px;
+      background-color: #000;
+      border: 3px solid #00ffcc;
+      border-radius: 10px;
+      box-shadow: 0 0 20px #ff00ff;
+    }
+    h2 {
+      color: #ffcc00;
+      text-shadow: 1px 1px #000;
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+      display: block; /* ensures visible immediately */
+      margin: 10px 0;
+      border: 2px solid #ff00ff;
+    }
+    iframe {
+      width: 100%;
+      height: 400px;
+      border: 2px solid #ff00ff;
+    }
+    #lebron {
+      display: none;
+      text-align: center;
+      font-size: 1.5em;
+      color: #ffcc00;
