--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       margin-top: 40px;
     }
     img {
-      width: 320px; /* resize as needed */
+      width: 320px; /* adjust size */
       margin: 20px;
       border: 4px dashed #00008b;
       border-radius: 8px;
@@ -36,20 +36,17 @@
 
   <div class="unit-section">
     <h2>Unit 1: Bits & Bytes</h2>
-    <img src="https://cdn.pixabay.com/photo/2015/04/23/00/41/binary-736885_1280.png" 
-         alt="Bits & Bytes Illustration">
+    <img src="understanding-bits-and-bytes.html" alt="Bits & Bytes Illustration">
   </div>
 
   <div class="unit-section">
     <h2>Unit 2: Data Compression</h2>
-    <img src="https://cdn.pixabay.com/photo/2017/06/10/07/25/compression-2388650_1280.png" 
-         alt="Data Compression Illustration">
+    <img src="download.jpeg" alt="Data Compression Illustration">
   </div>
 
   <div class="unit-section">
     <h2>Cloud Computing</h2>
-    <img src="https://cdn.pixabay.com/photo/2019/07/14/07/57/cloud-4332482_1280.png" 
-         alt="Cloud Computing Illustration">
+    <img src="download (1).jpeg" alt="Cloud Computing Illustration">
   </div>
 </body>
 </html>
