--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Retro Units Page</title>
   <style>
     body {
-      background-color: #f0e68c; /* retro yellow */
+      background-color: #1a1a1a;
+      color: #00ffcc;
       font-family: 'Courier New', monospace;
       text-align: center;
       padding: 20px;
@@ -16,15 +17,15 @@
       text-shadow: 2px 2px #000;
     }
     h2 {
-      color: #00008b;
+      color: #ffcc00;
       margin-top: 40px;
     }
     img {
-      width: 320px; /* adjust size */
-      margin: 20px;
-      border: 4px dashed #00008b;
-      border-radius: 8px;
-      display: inline-block;
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin: 10px auto;
+      border: 2px solid #ff00ff;
     }
     .unit-section {
       margin-bottom: 50px;
@@ -32,11 +33,12 @@
   </style>
 </head>
 <body>
-  <h1>Welcome to the Retro Units Page</h1>
+  <h1>Noel John's Retro Page</h1>
 
   <div class="unit-section">
     <h2>Unit 1: Bits & Bytes</h2>
-    <img src="understanding-bits-and-bytes.html" alt="Bits & Bytes Illustration">
+    <img src="https://cdn.pixabay.com/photo/2015/04/23/00/41/binary-736885_1280.png" 
+         alt="Bits & Bytes Binary Illustration">
   </div>
 
   <div class="unit-section">
