--- a/index.html
+++ b/index.html
@@ -1,54 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Retro Units Page</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <title>Noel John's Retro Page</title>
   <style>
+    /* Retro / neon look */
     body {
+      font-family: 'Courier New', monospace;
       background-color: #1a1a1a;
       color: #00ffcc;
-      font-family: 'Courier New', monospace;
-      text-align: center;
-      padding: 20px;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
     }
-    h1 {
-      color: #ff4500;
+    header {
+      background-color: #ff00ff;
+      color: #fff;
+      text-align: center;
+      padding: 20px 10px;
+      font-size: 2em;
+      letter-spacing: 2px;
       text-shadow: 2px 2px #000;
+      cursor: pointer;
+    }
+    main {
+      max-width: 900px;
+      margin: 20px auto;
+      padding: 0 16px 60px;
+    }
+    section.card {
+      background: #000;
+      border: 3px solid #00ffcc;
+      border-radius: 10px;
+      box-shadow: 0 0 18px #ff00ff;
+      padding: 18px;
+      margin-bottom: 22px;
     }
     h2 {
       color: #ffcc00;
-      margin-top: 40px;
+      margin: 0 0 12px;
+      text-shadow: 1px 1px #000;
     }
-    img {
+    p, li {
+      color: #c0ffee;
+    }
+    ul {
+      text-align: left;
+      margin-left: 28px;
+    }
+    .image-wrap {
+      text-align: center;
+      margin-top: 12px;
+    }
+    img.retro-img {
       max-width: 100%;
       height: auto;
-      display: block;
-      margin: 10px auto;
+      display: block;        /* visible immediately on load */
+      margin: 8px auto 0;
+      border: 3px solid #ff00ff;
+      border-radius: 8px;
+      box-shadow: 0 0 12px rgba(255,0,255,0.2);
+    }
+    .caption {
+      color: #ffcc00;
+      margin-top: 6px;
+      font-size: 0.95em;
+    }
+    iframe {
+      width: 100%;
+      height: 400px;
       border: 2px solid #ff00ff;
     }
-    .unit-section {
-      margin-bottom: 50px;
+    #lebron {
+      display: none;
+      text-align: center;
+      font-size: 1.2em;
+      color: #ffcc00;
+      margin-top: 14px;
+    }
+
+    /* small responsive tweaks */
+    @media (max-width: 520px) {
+      header { font-size: 1.4em; padding: 14px 8px; }
     }
   </style>
 </head>
 <body>
-  <h1>Noel John's Retro Page</h1>
 
-  <div class="unit-section">
+<header id="header">Noel John</header>
+
+<main>
+  <!-- Goals & Vocab -->
+  <section class="card">
+    <h2>My Goals After High School</h2>
+    <p>After high school, I want to study <strong>engineering</strong>. I’m interested in learning how computers and digital systems work, including concepts like:</p>
+    <ul>
+      <li><strong>Bit:</strong> A binary digit — either <code>0</code> or <code>1</code>.</li>
+      <li><strong>Byte:</strong> A group of 8 bits.</li>
+      <li><strong>Roundoff:</strong> Error when numbers can't be represented exactly with limited bits.</li>
+      <li><strong>Analog data:</strong> Values that change smoothly over time (e.g., sound waves).</li>
+      <li><strong>Lossless:</strong> Compression where original data can be fully recovered.</li>
+      <li><strong>Lossy:</strong> Compression that throws away some data and can't be fully recovered.</li>
+      <li><strong>Metadata:</strong> Data about data (e.g., file name, date, author).</li>
+    </ul>
+  </section>
+
+  <!-- Unit 1 - Bits & Bytes (binary image) -->
+  <section class="card">
     <h2>Unit 1: Bits & Bytes</h2>
-    <img src="https://cdn.pixabay.com/photo/2015/04/23/00/41/binary-736885_1280.png" 
-         alt="Bits & Bytes Binary Illustration">
-  </div>
+    <p>Bits are the simplest unit of information in computing — everything stored or sent electronically is ultimately made from sequences of 1s and 0s.</p>
 
-  <div class="unit-section">
+    <div class="image-wrap">
+      <!-- binary image hosted online for reliability -->
+      <img class="retro-img"
+           src="https://cdn.pixabay.com/photo/2015/04/23/00/41/binary-736885_1280.png"
+           alt="Binary 1s and 0s illustration (bits and bytes)">
+      <div class="caption">Binary stream: 1s and 0s — the foundation of digital data.</div>
+    </div>
+  </section>
+
+  <!-- Unit 2 - Data Compression -->
+  <section class="card">
     <h2>Unit 2: Data Compression</h2>
-    <img src="download.jpeg" alt="Data Compression Illustration">
-  </div>
+    <p>Compression reduces file sizes so data moves and stores faster. There are both lossless and lossy approaches.</p>
 
-  <div class="unit-section">
+    <div class="image-wrap">
+      <!-- your uploaded file (must be in same folder as this HTML) -->
+      <img class="retro-img" src="download.jpeg" alt="Data compression illustration (local file)">
+      <div class="caption">Data/compression illustration (local file: <code>download.jpeg</code>).</div>
+    </div>
+  </section>
+
+  <!-- Cloud Computing -->
+  <section class="card">
     <h2>Cloud Computing</h2>
-    <img src="download (1).jpeg" alt="Cloud Computing Illustration">
-  </div>
+    <p>Cloud computing stores and runs apps on remote servers so you can access them anywhere with the internet.</p>
+
+    <div class="image-wrap">
+      <!-- your uploaded cloud image (encoded space to avoid browser path issues) -->
+      <img class="retro-img" src="download%20(1).jpeg" alt="Cloud computing illustration (local file)">
+      <div class="caption">Cloud computing illustration (local file: <code>download (1).jpeg</code>).</div>
+    </div>
+  </section>
+
+  <!-- Optional video if you like -->
+  <section class="card">
+    <h2>How the Internet Works (optional)</h2>
+    <iframe src="https://www.youtube.com/embed/Dxcc6ycZ73M"
+            title="How the Internet Works"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+  </section>
+
+  <div id="lebron">🏀 Surprise! LeBron James is watching! 🏀</div>
+</main>
+
+<script>
+  // keep the fun header easter-egg from the earlier page
+  let clickCount = 0;
+  const header = document.getElementById('header');
+  const lebron = document.getElementById('lebron');
+
+  header.addEventListener('click', () => {
+    clickCount++;
+    if (clickCount === 5) {
+      lebron.style.display = 'block';
+      alert("Easter Egg Unlocked: LeBron James!");
+    }
+  });
+</script>
+
 </body>
 </html>
