--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Noel John's Retro Page</title>
   <style>
-    /* Retro / neon look */
     body {
       font-family: 'Courier New', monospace;
       background-color: #1a1a1a;
@@ -13,12 +12,12 @@
       margin: 0;
       padding: 0;
       line-height: 1.6;
+      text-align: center;
     }
     header {
       background-color: #ff00ff;
       color: #fff;
-      text-align: center;
-      padding: 20px 10px;
+      padding: 20px;
       font-size: 2em;
       letter-spacing: 2px;
       text-shadow: 2px 2px #000;
@@ -39,33 +38,27 @@
     }
     h2 {
       color: #ffcc00;
-      margin: 0 0 12px;
+      margin-top: 0;
       text-shadow: 1px 1px #000;
     }
     p, li {
       color: #c0ffee;
+      text-align: left;
     }
     ul {
-      text-align: left;
-      margin-left: 28px;
+      margin-left: 30px;
     }
     .image-wrap {
-      text-align: center;
       margin-top: 12px;
     }
     img.retro-img {
       max-width: 100%;
       height: auto;
-      display: block;        /* visible immediately on load */
-      margin: 8px auto 0;
+      display: block;
+      margin: 8px auto;
       border: 3px solid #ff00ff;
       border-radius: 8px;
       box-shadow: 0 0 12px rgba(255,0,255,0.2);
-    }
-    .caption {
-      color: #ffcc00;
-      margin-top: 6px;
-      font-size: 0.95em;
     }
     iframe {
       width: 100%;
@@ -74,15 +67,8 @@
     }
     #lebron {
       display: none;
-      text-align: center;
-      font-size: 1.2em;
-      color: #ffcc00;
       margin-top: 14px;
-    }
-
-    /* small responsive tweaks */
-    @media (max-width: 520px) {
-      header { font-size: 1.4em; padding: 14px 8px; }
+      color: #ffcc00;
     }
   </style>
 </head>
@@ -91,62 +77,48 @@
 <header id="header">Noel John</header>
 
 <main>
-  <!-- Goals & Vocab -->
   <section class="card">
     <h2>My Goals After High School</h2>
     <p>After high school, I want to study <strong>engineering</strong>. I’m interested in learning how computers and digital systems work, including concepts like:</p>
     <ul>
-      <li><strong>Bit:</strong> A binary digit — either <code>0</code> or <code>1</code>.</li>
+      <li><strong>Bit:</strong> A binary digit (0 or 1).</li>
       <li><strong>Byte:</strong> A group of 8 bits.</li>
-      <li><strong>Roundoff:</strong> Error when numbers can't be represented exactly with limited bits.</li>
-      <li><strong>Analog data:</strong> Values that change smoothly over time (e.g., sound waves).</li>
-      <li><strong>Lossless:</strong> Compression where original data can be fully recovered.</li>
-      <li><strong>Lossy:</strong> Compression that throws away some data and can't be fully recovered.</li>
-      <li><strong>Metadata:</strong> Data about data (e.g., file name, date, author).</li>
+      <li><strong>Roundoff:</strong> Error when numbers can’t be exactly represented.</li>
+      <li><strong>Analog data:</strong> Smooth, continuous values (e.g. sound waves).</li>
+      <li><strong>Lossless:</strong> Compression that preserves all original data.</li>
+      <li><strong>Lossy:</strong> Compression that discards some data permanently.</li>
+      <li><strong>Metadata:</strong> “Data about data” (file info, author, date, etc.).</li>
     </ul>
   </section>
 
-  <!-- Unit 1 - Bits & Bytes (binary image) -->
   <section class="card">
     <h2>Unit 1: Bits & Bytes</h2>
-    <p>Bits are the simplest unit of information in computing — everything stored or sent electronically is ultimately made from sequences of 1s and 0s.</p>
-
+    <p>Everything digital is built from sequences of 1s and 0s — bits are the basic units of information.</p>
     <div class="image-wrap">
-      <!-- binary image hosted online for reliability -->
       <img class="retro-img"
            src="https://cdn.pixabay.com/photo/2015/04/23/00/41/binary-736885_1280.png"
-           alt="Binary 1s and 0s illustration (bits and bytes)">
-      <div class="caption">Binary stream: 1s and 0s — the foundation of digital data.</div>
+           alt="Binary 1s and 0s illustration (bits & bytes)">
     </div>
   </section>
 
-  <!-- Unit 2 - Data Compression -->
   <section class="card">
     <h2>Unit 2: Data Compression</h2>
-    <p>Compression reduces file sizes so data moves and stores faster. There are both lossless and lossy approaches.</p>
-
+    <p>Compression reduces file size to save space or speed up transmission. It can be lossless or lossy.</p>
     <div class="image-wrap">
-      <!-- your uploaded file (must be in same folder as this HTML) -->
-      <img class="retro-img" src="download.jpeg" alt="Data compression illustration (local file)">
-      <div class="caption">Data/compression illustration (local file: <code>download.jpeg</code>).</div>
+      <img class="retro-img" src="download.jpeg" alt="Data compression illustration (local)">
     </div>
   </section>
 
-  <!-- Cloud Computing -->
   <section class="card">
     <h2>Cloud Computing</h2>
-    <p>Cloud computing stores and runs apps on remote servers so you can access them anywhere with the internet.</p>
-
+    <p>Cloud computing stores data and services on remote servers so you can access them from anywhere.</p>
     <div class="image-wrap">
-      <!-- your uploaded cloud image (encoded space to avoid browser path issues) -->
-      <img class="retro-img" src="download%20(1).jpeg" alt="Cloud computing illustration (local file)">
-      <div class="caption">Cloud computing illustration (local file: <code>download (1).jpeg</code>).</div>
+      <img class="retro-img" src="download%20(1).jpeg" alt="Cloud computing illustration (local)">
     </div>
   </section>
 
-  <!-- Optional video if you like -->
   <section class="card">
-    <h2>How the Internet Works (optional)</h2>
+    <h2>How the Internet Works</h2>
     <iframe src="https://www.youtube.com/embed/Dxcc6ycZ73M"
             title="How the Internet Works"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -157,11 +129,9 @@
 </main>
 
 <script>
-  // keep the fun header easter-egg from the earlier page
   let clickCount = 0;
   const header = document.getElementById('header');
   const lebron = document.getElementById('lebron');
-
   header.addEventListener('click', () => {
     clickCount++;
     if (clickCount === 5) {
