--- a/index.html
+++ b/index.html
@@ -48,17 +48,14 @@
     ul {
       margin-left: 30px;
     }
-    .image-wrap {
-      margin-top: 12px;
-    }
     img.retro-img {
       max-width: 100%;
       height: auto;
       display: block;
-      margin: 8px auto;
+      margin: 12px auto;
       border: 3px solid #ff00ff;
       border-radius: 8px;
-      box-shadow: 0 0 12px rgba(255,0,255,0.2);
+      box-shadow: 0 0 12px rgba(255,0,255,0.4);
     }
     iframe {
       width: 100%;
@@ -93,28 +90,31 @@
 
   <section class="card">
     <h2>Unit 1: Bits & Bytes</h2>
-    <p>Everything digital is built from sequences of 1s and 0s — bits are the basic units of information.</p>
-    <div class="image-wrap">
-      <img class="retro-img"
-           src="https://cdn.pixabay.com/photo/2015/04/23/00/41/binary-736885_1280.png"
-           alt="Binary 1s and 0s illustration (bits & bytes)">
-    </div>
+    <p>Bits are the smallest unit of digital information, and bytes (8 bits) form the building blocks of all digital files.</p>
+    <img class="retro-img"
+         src="https://cdn.pixabay.com/photo/2015/04/23/00/41/binary-736885_1280.png"
+         alt="Bits & Bytes - Binary numbers">
   </section>
 
   <section class="card">
     <h2>Unit 2: Data Compression</h2>
-    <p>Compression reduces file size to save space or speed up transmission. It can be lossless or lossy.</p>
-    <div class="image-wrap">
-      <img class="retro-img" src="download.jpeg" alt="Data compression illustration (local)">
-    </div>
+    <p>Compression reduces file size so data is easier to store and transfer.</p>
+    <img class="retro-img"
+         src="https://cdn.pixabay.com/photo/2017/01/31/13/14/icon-2027661_1280.png"
+         alt="Data Compression - Zip file icon">
   </section>
 
   <section class="card">
     <h2>Cloud Computing</h2>
-    <p>Cloud computing stores data and services on remote servers so you can access them from anywhere.</p>
-    <div class="image-wrap">
-      <img class="retro-img" src="download%20(1).jpeg" alt="Cloud computing illustration (local)">
-    </div>
+    <p>
+      Cloud computing uses remote servers to store, manage, and process data instead of relying on your local machine. 
+      It makes collaboration easier because multiple people can work on the same files in real time. 
+      Cloud platforms also scale resources up or down automatically depending on how much power or storage is needed. 
+      This means you can access powerful tools without having to buy expensive hardware.
+    </p>
+    <img class="retro-img"
+         src="https://cdn.pixabay.com/photo/2019/07/14/07/57/cloud-4332482_1280.png"
+         alt="Cloud Computing Illustration">
   </section>
 
   <section class="card">
