--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
   <section class="card">
     <h2>Unit 2: Data Compression</h2>
-    <p>Compression reduces file size so data is easier to store and transfer.</p>
+    <p>Compression reduces file size so data is easier to store and transfer. There are two main types: <em>lossless</em>, which keeps all the original data, and <em>lossy</em>, which discards some data to shrink files even more.</p>
     <img class="retro-img"
          src="https://cdn.pixabay.com/photo/2017/01/31/13/14/icon-2027661_1280.png"
          alt="Data Compression - Zip file icon">
